# GraphMain

./: README.md  package-lock.json
algorithm/: .gitignore  absolute_hum_math.py  data_download_hum.py  data_download_temp.py  data_preprocessing.py  main.py
algorithm/config/: aws_config.py
algorithm/data_downloader/: data_download_hum.py  data_download_temp.py
algorithm/data_process/: absolute_hum_math.py  data_preprocessing.py  model_training.py
algorithm/plots/: plot_humidity.py  plot_temperature.py
algorithm/query/: query.py
algorithm/results/: absolute_humidity.csv  anomalies.csv  query_results_hum.csv  query_results_temp.csv  trained_model.pkl
backend/: .gitignore  pom.xml
backend/src/main/java/com/kacper/backend/: BackendApplication.java
backend/src/main/java/com/kacper/backend/anomaly/: AnomalyController.java  (+2 more)
backend/src/main/resources/: application.properties
backend/src/test/java/com/kacper/backend/: BackendApplicationTests.java
graphmain-fe/: README.md  index.html  package-lock.json  package.json  router.ts  sockjs-client.d.ts
graphmain-fe/src/: App.css  App.tsx  entities.ts  index.css  main.tsx
graphmain-fe/src/components/device/: deviceDetails.tsx  deviceInfoTable.tsx  deviceInfoTableRow.tsx
graphmain-fe/src/components/measurement/: measurementHead.tsx  measurementInfiniteScroll.tsx  measurementTable.tsx  measurementsGraph.tsx  measurmentRow.tsx  measurmentsFilter.tsx
graphmain-fe/src/components/nav/: mainNav.module.css  mainNav.tsx  navItem.tsx
graphmain-fe/src/components/notification/: notificationFullListItem.tsx  notificationList.tsx  notifications.tsx
graphmain-fe/src/components/pages/: allDevices.tsx  dasboardPage.tsx  deviceDetails.tsx  errorPage.tsx  loginPage.tsx  logoutPage.tsx  measurementsTable.tsx  measurementsTablePage.tsx  notificationsPage.tsx  root.tsx
graphmain-fe/src/components/pages/admin/: adminRoot.tsx  allUsersPage.tsx  registerUserPage.tsx
graphmain-fe/src/components/table-data/: row.tsx
graphmain-fe/src/components/ui/: breadcrumbs.tsx  errorInfo.tsx  flashMessages.tsx  spinner.tsx
graphmain-fe/src/components/user/: userList.tsx
graphmain-fe/src/http/: authUtils.ts  fetch.ts  hooks.ts
graphmain-fe/src/store/: appStore.tsx  authStore.tsx  flashStore.tsx
rpi/: .gitignore  aws_script_client.py  cleanup.py  config.py  hc.py  main.py
rpi/direct_aws/: .gitignore  README.md  main.py
rpi/sensors/: humidity_reader.py  temp.py
rpi/server/: .gitignore  README.md  client.py  server.py
rpi_simulator/: .gitignore  CMakeLists.txt  README.md  run.sh  test.py
rpi_simulator/models/: isolation_forest.py  isolation_forest_model.pkl  random_forest.py  random_forest_model.pkl
rpi_simulator/src/: anomaly.cpp  anomaly.hh  data_reader.cpp  data_reader.hh  main.cpp  writer.cpp  writer.hh
rpi_simulator/src/model/: model.cpp  model.hh
(+79 files in other folders)
